# rorr-mods

./: .gitignore  README.md
src/: Directory.Build.props  Tomat.RoRR.sln  Tomat.RoRR.sln.DotSettings
src/AurieCommon/: common.hpp
src/AurieCommon/Aurie/: shared.hpp
src/AurieCommon/FunctionWrapper/: FunctionWrapper.hpp
src/AurieCommon/YYToolkit/: Shared.cpp  Shared.hpp
src/AuriePack/: CHANGELOG.md  README.md  manifest.json  run-installer.cmd  versions.txt
src/DebugOverlay/: DebugOverlay.vcxproj  DebugOverlay.vcxproj.filters  README.md  manifest.json
src/DebugOverlay/source/: ModuleMain.cpp
src/EmptyMod/: EmptyMod.vcxproj  main.cpp
src/IntoCutsceneSkip/: IntoCutsceneSkip.vcxproj  hooking.cpp  hooking.h  main.cpp
src/MusicTest/: MusicTest.vcxproj  main.cpp
src/OpenWinExt/: OpenWinExt.vcxproj  OpenWinExt.vcxproj.filters  dllmain.cpp  dllmain.h
src/ProvEdit/: ProvEdit.yyp  README.md
src/ProvEdit.yyp/: ProvEdit.resource_order  ProvEdit.yyp
src/Tomat.Torrential.Host/: Tomat.Torrential.Host.vcxproj  main.cpp  main.h  nethost.props  threading.cpp  threading.h
src/Tomat.Umbrella.Host/: NativeMethods.txt  Program.cs  Tomat.Umbrella.Host.csproj  Tomat.Umbrella.Host.vcxproj  debug.cmd  logging.cpp  logging.h  main.cpp  threading.cpp
src/Tomat.Umbrella.Logging/: LogEntry.cs  LogLevel.cs  LogLevels.cs  LogWriter.cs  Logger.cs
src/Tomat.Umbrella.Paths/: PathHelper.cs  Tomat.Umbrella.Paths.csproj
src/Torrential/: Torrential.vcxproj  dllmain.cpp  main.h
src/Torrential/API/: API.h  (+1 more)
src/umbrella-host/: Cargo.toml  build.rs
src/umbrella-host/src/: lib.rs
(+1381 files in other folders)
