[package]
name = "umbrella-host"
authors = ["tomat"]
description = "Umbrella API host and DLL hijacker"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
